# traceviz-mcp

./: .gitignore  README.md  pyproject.toml
traceviz/: README.md  cli.py  loader.py  mcp_server.py  model.py  render.py  stats.py
